# ainex_xyz

./: .gitignore  rosa_file_browser.py
.claude/: settings.json  (+1 more)
docker/ros_ws_src/ainex_behavior/: CMakeLists.txt  SPEC.md  bt_infra_manifest_framework.md  bt_observability_framework.md  claude_dev_environment.md  package.xml
docker/ros_ws_src/ainex_behavior/bt_observability/: bt_debug_visitor.py  debug_event_logger.py
docker/ros_ws_src/ainex_behavior/fall_recovery/: fall_recovery_bt_node.launch
docker/ros_ws_src/ainex_behavior/fall_recovery/app/: fall_recovery_bt_node.py
docker/ros_ws_src/ainex_behavior/fall_recovery/behaviours/: conditions.py
docker/ros_ws_src/ainex_behavior/fall_recovery/comm/: comm_facade.py
docker/ros_ws_src/ainex_behavior/fall_recovery/infra/: bb_ros_bridge.py  infra_manifest.py
docker/ros_ws_src/ainex_behavior/fall_recovery/log/: bt_debug_lastrun.jsonl  bt_debug_recent.jsonl  bt_ros_comm_debug_lastrun.jsonl  bt_ros_comm_debug_recent.jsonl  infra_comm_manifest_lastrun.json
docker/ros_ws_src/ainex_behavior/fall_recovery/semantics/: semantic_facade.py
docker/ros_ws_src/ainex_behavior/fall_recovery/tree/: fall_recovery_bt.py
docker/ros_ws_src/ainex_behavior/log/: bt_debug_lastrun.jsonl  bt_debug_recent.jsonl  bt_ros_comm_debug_lastrun.jsonl  bt_ros_comm_debug_recent.jsonl  infra_comm_manifest_lastrun.json
docker/ros_ws_src/ainex_behavior/marathon/: DESCRIPTION.md  IMPORTS.md  ainex_bt_obs_recording_improvements.md  ainex_bt_observability_execution_plan.md  bb_ros_bridge.py  bt_exec_controller.py  check_imports.py  comm_facade.py  marathon_bt.py  marathon_bt_node.launch  marathon_bt_node.py  marathon_bt_ros_facade_minimal_execution_plan.md  marathon_business_comm_path_isolation_execution_plan.md  marathon_infra_manifest_execution_plan.md  marathon_non_business_comm_minimal_note.md  marathon_semantic_generic_facade_refactor_design.md  semantic_facade.py
docker/ros_ws_src/ainex_behavior/marathon/algorithms/: visual_patrol.py
docker/ros_ws_src/ainex_behavior/marathon/app/: marathon_bt_node.py
docker/ros_ws_src/ainex_behavior/marathon/behaviours/: __init__.py  actions.py  conditions.py  visual_patrol.py
docker/ros_ws_src/ainex_behavior/marathon/comm/: comm_facade.py
docker/ros_ws_src/ainex_behavior/marathon/infra/: bb_ros_bridge.py  infra_manifest.py
docker/ros_ws_src/ainex_behavior/marathon/log/: bt_debug_lastrun.jsonl  bt_debug_recent.jsonl  bt_ros_comm_debug_lastrun.jsonl  bt_ros_comm_debug_recent.jsonl  infra_comm_manifest_lastrun.json
docker/ros_ws_src/ainex_behavior/marathon/log/rosbag/: bt_session_2026-04-09-00-52-47_2.bag.active
docker/ros_ws_src/ainex_behavior/marathon/semantics/: semantic_facade.py
docker/ros_ws_src/ainex_behavior/marathon/tree/: marathon_bt.py
docker/ros_ws_src/ainex_bringup/: CMakeLists.txt  package.xml
docker/ros_ws_src/ainex_bringup/launch/: base.launch  bringup.launch
docker/ros_ws_src/ainex_bringup/scripts/: start_app_node.sh
docker/ros_ws_src/ainex_bringup/service/: expand_rootfs.service  install.sh  oled_display.service  start_app_node.service
docker/ros_ws_src/ainex_simulations/ainex_description/: CMakeLists.txt  package.xml
docker/ros_ws_src/ainex_simulations/ainex_description/launch/: .gazebo.launch.swo  display.launch  gazebo.launch
docker/ros_ws_src/ainex_simulations/ainex_description/rviz/: urdf.rviz
docker/ros_ws_src/ainex_simulations/ainex_gazebo/: CMakeLists.txt  package.xml
docker/ros_ws_src/ainex_simulations/ainex_gazebo/config/: position_controller.yaml
docker/ros_ws_src/ainex_simulations/ainex_gazebo/launch/: empty_world.launch  position_controller.launch  spwan_model.launch  worlds.launch
docker/ros_ws_src/ainex_simulations/ainex_gazebo/rviz/: urdf.rviz
docker/ros_ws_src/ainex_simulations/ainex_gazebo/worlds/: empty.world
docker/ros_ws_src/xyz_behavior/: CMakeLists.txt  SPEC.md  bt_infra_manifest_framework.md  bt_observability_framework.md  claude_dev_environment.md  package.xml  setup.py
docker/ros_ws_src/xyz_behavior/bt_observability/: debug_event_logger.py  ros_comm_tracer.py
docker/ros_ws_src/xyz_behavior/log/: bt_ros_comm_debug_lastrun.jsonl  bt_ros_comm_debug_recent.jsonl  infra_comm_manifest_lastrun.json
docker/ros_ws_src/xyz_bt_edu/: CMakeLists.txt  package.xml  setup.py  xyz_bt_edu_spec.md
docker/ros_ws_src/xyz_bt_edu/config/: line_perception.yaml
docker/ros_ws_src/xyz_bt_edu/msg/: BTNodeEvent.msg
docker/ros_ws_src/xyz_bt_edu/scripts/: bt_edu_node.py
docker/ros_ws_src/xyz_bt_edu/src/behaviours_tem/: __init__.py
docker/ros_ws_src/xyz_bt_edu/src/behaviours_tem/L1_perception/: L1_Battery_IsVoltageOk.py  L1_System_IsButtonPressed.py  L1_Vision_IsFaceDetected.py  L1_Vision_IsObjectDetected.py  L1_Vision_IsPatternDetected.py  __init__.py
docker/ros_ws_src/xyz_bt_edu/src/behaviours_tem/L2_locomotion/: L2_Arm_MoveToPreset.py  L2_Gait_Enable.py  L2_Gait_SetParam.py  L2_Gait_Start.py  L2_Head_TrackObject.py  L2_Motion_PlayAction.py  L2_Motion_PlayFromBB.py  L2_Vision_SetColorTarget.py  L2_Vision_UpdateROI.py  __init__.py
docker/ros_ws_src/xyz_bt_edu/src/behaviours_tem/L3_mission/: L3_Arm_PickObject.py  L3_Arm_PlaceObject.py  L3_Balance_SafeWalk.py  L3_Gait_ApproachObject.py  L3_Gesture_RecognizeAndAct.py  L3_Mission_ExecuteSequence.py  L3_Mission_TagNavigate.py  L3_Vision_StartColorDetectFromBB.py  L3_Vision_TrackColorLine.py  L3_Vision_TrackColorObject.py  L3_Vision_TrackFace.py  __init__.py
docker/ros_ws_src/xyz_bt_edu/src/xyz_bt_edu/: PROGRESS.md  README.md  __init__.py  base_adapter.py  base_facade.py  base_node.py  bb_ros_bridge.py  blackboard_keys.py  bt_runner.py
docker/ros_ws_src/xyz_bt_edu/src/xyz_bt_edu/behaviours/: L2_MIGRATION.md
docker/ros_ws_src/xyz_bt_edu/src/xyz_bt_edu/behaviours/L1_perception/: L1_Balance_IsFallen.py  L1_Balance_IsStanding.py  L1_Head_IsHeadCentered.py  L1_Vision_IsLineDetected.py  L1_Vision_IsObjectStill.py  L1_Vision_IsTargetOnLeft.py
docker/ros_ws_src/xyz_bt_edu/src/xyz_bt_edu/input_adapters/: __init__.py  imu_balance_state_adapter.py  line_detection_adapter.py  object_detection_adapter.py
(+508 files in other folders)
