<?xml version="1.0"?>
<package format="2">
  <name>ainex_behavior</name>
  <version>0.1.0</version>
  <description>Behavior tree implementations for Ainex humanoid robot (HuroCup 2025)</description>

  <maintainer email="xzheng2@laurentian.ca">xzheng2</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ainex_interfaces</build_depend>
  <build_depend>ainex_example</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ainex_interfaces</exec_depend>
  <exec_depend>ainex_example</exec_depend>
  <exec_depend>py_trees_msgs</exec_depend>
  <exec_depend>unique_id</exec_depend>
</package>
