<?xml version="1.0"?>
<package format="2">
  <name>xyz_bt_edu</name>
  <version>1.1.0</version>
  <description>AiNex Educational Behavior Tree Framework</description>

  <maintainer email="xzheng2@laurentian.ca">xzheng2</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ainex_interfaces</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ainex_interfaces</exec_depend>
  <exec_depend>ainex_example</exec_depend>
  <exec_depend>ainex_kinematics</exec_depend>
  <exec_depend>ros_robot_controller</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>py_trees</exec_depend>
</package>
